var searchData=
[
  ['titlefieldnumber_0',['titlefieldnumber',['../classg_r_p_c_client_1_1_class_data.html#ac9da286452ffe4036ab6a7aca4b1da48',1,'gRPCClient.ClassData.TitleFieldNumber'],['../classg_r_p_c_client_1_1_class_entity_creation.html#a899ffa8ec1188fc4b42c57e73b134ef8',1,'gRPCClient.ClassEntityCreation.TitleFieldNumber'],['../classg_r_p_c_client_1_1_homework.html#a6d27102eb04f31978e7a9325d50fb569',1,'gRPCClient.Homework.TitleFieldNumber']]],
  ['topicfieldnumber_1',['topicfieldnumber',['../classg_r_p_c_client_1_1_lesson_data.html#a69b3bb0538297513fa2343d181b45dc6',1,'gRPCClient.LessonData.TopicFieldNumber'],['../classg_r_p_c_client_1_1_lesson_overview.html#a73ef0f5e4b26dfae903fcec9b436680d',1,'gRPCClient.LessonOverview.TopicFieldNumber'],['../classg_r_p_c_client_1_1_lesson_attended.html#a48c8748afc3dc3c316535d044f2dbc24',1,'gRPCClient.LessonAttended.TopicFieldNumber']]]
];
